Made attributes for types controller
